Fix typos in report

--- a/lane_tracking_p1/P1.ipynb
+++ b/lane_tracking_p1/P1.ipynb
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -908,7 +908,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 55%|█████▍    | 138/251 [00:20<00:16,  6.80it/s]"
+      "100%|██████████| 251/251 [00:36<00:00,  7.14it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MoviePy] Done.\n",
+      "[MoviePy] >>>> Video ready: test_videos_output/challenge.mp4 \n",
+      "\n",
+      "CPU times: user 30.8 s, sys: 7.07 s, total: 37.9 s\n",
+      "Wall time: 37.3 s\n"
      ]
     }
    ],
@@ -927,11 +938,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<video width=\"960\" height=\"540\" controls>\n",
+       "  <source src=\"test_videos_output/challenge.mp4\">\n",
+       "</video>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "HTML(\"\"\"\n",
     "<video width=\"960\" height=\"540\" controls>\n",
