--- a/traffic_sign_classifier/Traffic_Sign_Classifier.ipynb
+++ b/traffic_sign_classifier/Traffic_Sign_Classifier.ipynb
@@ -509,7 +509,60 @@
     "    l8 = tf.nn.dropout(l8, keep_prob)\n",
     "    l9 = full_connected(l8, (150, n_classes), all_vars, is_training, True, activate=False)\n",
     "    all_layers.extend([l1, l2, l3, l4, l5, l6, l7, l8, l9])\n",
-    "    return l9\n"
+    "    return l9\n",
+    "\n",
+    "def LeNet(x):    \n",
+    "    # Hyperparameters\n",
+    "    mu = 0\n",
+    "    sigma = 0.1\n",
+    "\n",
+    "    # SOLUTION: Layer 1: Convolutional. Input = 32x32x1. Output = 28x28x6.\n",
+    "    conv1_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 3, 6), mean = mu, stddev = sigma))\n",
+    "    conv1_b = tf.Variable(tf.zeros(6))\n",
+    "    conv1   = tf.nn.conv2d(x, conv1_W, strides=[1, 1, 1, 1], padding='VALID') + conv1_b\n",
+    "\n",
+    "    # SOLUTION: Activation.\n",
+    "    conv1 = tf.nn.relu(conv1)\n",
+    "\n",
+    "    # SOLUTION: Pooling. Input = 28x28x6. Output = 14x14x6.\n",
+    "    conv1 = tf.nn.max_pool(conv1, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
+    "\n",
+    "    # SOLUTION: Layer 2: Convolutional. Output = 10x10x16.\n",
+    "    conv2_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 6, 16), mean = mu, stddev = sigma))\n",
+    "    conv2_b = tf.Variable(tf.zeros(16))\n",
+    "    conv2   = tf.nn.conv2d(conv1, conv2_W, strides=[1, 1, 1, 1], padding='VALID') + conv2_b\n",
+    "\n",
+    "    # SOLUTION: Activation.\n",
+    "    conv2 = tf.nn.relu(conv2)\n",
+    "\n",
+    "    # SOLUTION: Pooling. Input = 10x10x16. Output = 5x5x16.\n",
+    "    conv2 = tf.nn.max_pool(conv2, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
+    "\n",
+    "    # SOLUTION: Flatten. Input = 5x5x16. Output = 400.\n",
+    "    fc0   = flatten(conv2)\n",
+    "\n",
+    "    # SOLUTION: Layer 3: Fully Connected. Input = 400. Output = 120.\n",
+    "    fc1_W = tf.Variable(tf.truncated_normal(shape=(400, 120), mean = mu, stddev = sigma))\n",
+    "    fc1_b = tf.Variable(tf.zeros(120))\n",
+    "    fc1   = tf.matmul(fc0, fc1_W) + fc1_b\n",
+    "\n",
+    "    # SOLUTION: Activation.\n",
+    "    fc1    = tf.nn.relu(fc1)\n",
+    "\n",
+    "    # SOLUTION: Layer 4: Fully Connected. Input = 120. Output = 84.\n",
+    "    fc2_W  = tf.Variable(tf.truncated_normal(shape=(120, 84), mean = mu, stddev = sigma))\n",
+    "    fc2_b  = tf.Variable(tf.zeros(84))\n",
+    "    fc2    = tf.matmul(fc1, fc2_W) + fc2_b\n",
+    "\n",
+    "    # SOLUTION: Activation.\n",
+    "    fc2    = tf.nn.relu(fc2)\n",
+    "\n",
+    "    # SOLUTION: Layer 5: Fully Connected. Input = 84. Output = 10.\n",
+    "    fc3_W  = tf.Variable(tf.truncated_normal(shape=(84, 43), mean = mu, stddev = sigma))\n",
+    "    fc3_b  = tf.Variable(tf.zeros(43))\n",
+    "    logits = tf.matmul(fc2, fc3_W) + fc3_b\n",
+    "\n",
+    "    return logits\n"
    ]
   },
   {
@@ -540,7 +593,7 @@
     "from sklearn.utils import shuffle\n",
     "\n",
     "# Data placeholders\n",
-    "x_pl = tf.placeholder(tf.float32, (None, 80, 80, 1))\n",
+    "x_pl = tf.placeholder(tf.float32, (None, 32, 32, 3))\n",
     "y_pl = tf.placeholder(tf.int32, (None))\n",
     "one_hot_y = tf.one_hot(y_pl, n_classes)\n",
     "is_train = tf.placeholder(tf.bool)\n",
@@ -552,13 +605,15 @@
     "\n",
     "all_vars = []\n",
     "all_layers = []\n",
-    "logits = model(x_pl, is_train, all_vars, all_layers, keep_prob)\n",
+    "#logits = model(x_pl, is_train, all_vars, all_layers, keep_prob)\n",
+    "logits = LeNet(x_pl)\n",
     "\n",
     "# Training\n",
     "cross_entropy = tf.nn.softmax_cross_entropy_with_logits(labels=one_hot_y, logits=logits)\n",
     "loss_operation = tf.reduce_mean(cross_entropy)\n",
     "regularizers = tf.reduce_sum([tf.nn.l2_loss(v) for v in all_vars])\n",
-    "loss_operation = tf.reduce_mean(loss_operation + beta_pl * regularizers)\n",
+    "#loss_operation = tf.reduce_mean(loss_operation + beta_pl * regularizers)\n",
+    "loss_operation = tf.reduce_mean(loss_operation)\n",
     "loss_operation = tf.reduce_mean(loss_operation)\n",
     "optimizer = tf.train.AdamOptimizer(learning_rate=learn_rate_pl)\n",
     "update_ops = tf.get_collection(tf.GraphKeys.UPDATE_OPS)\n",
@@ -591,7 +646,7 @@
     "\n",
     "        print(\"TRAIN: beta_{}__batchsize_{}__epochs_{}__rate_{}\\n\".format(beta, batch_size, epochs, rate))\n",
     "        for i in range(epochs):\n",
-    "            X_train_shuffled, y_train_shuffled = shuffle(X_train_prep, y_train_prep)\n",
+    "            X_train_shuffled, y_train_shuffled = shuffle(X_train, y_train)\n",
     "            for offset in range(0, num_examples, batch_size):\n",
     "                end = offset + batch_size\n",
     "                batch_x, batch_y = X_train_shuffled[offset:end], y_train_shuffled[offset:end]\n",
@@ -604,10 +659,10 @@
     "                    keep_prob: 0.6\n",
     "                })\n",
     "\n",
-    "            validation_accuracy = evaluate(accuracy_operation, X_valid_prep, y_valid_prep, False)\n",
+    "            validation_accuracy = evaluate(accuracy_operation, X_valid, y_valid, False)\n",
     "            print(\"EPOCH {} ...\".format(i + 1))\n",
     "            print(\"Validation Accuracy = {:.3f}\".format(validation_accuracy))\n",
-    "        validation_accuracy = evaluate(accuracy_operation, X_valid_prep, y_valid_prep, False)\n",
+    "        validation_accuracy = evaluate(accuracy_operation, X_valid, y_valid, False)\n",
     "        print(\"VALIDATE: beta_{}__batchsize_{}__epochs_{}__rate_{}: {:.3f}\\n\".format(beta, batch_size, epochs, rate, validation_accuracy))\n",
     "        saver.save(sess, './ts_model__beta_{}__batchsize_{}__epochs_{}__rate_{}'.format(beta, batch_size, epochs, rate))"
    ]
